--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 {% block body %}
 
 
-<form action = "http://localhost:5000/wykres" method = "post">
+<form action = "https://zbiornik2.herokuapp.com/wykres" method = "post">
          <p>Podaj czas w sekundach:</p>
          <p><input type = "number" name = "time" /></p>
          <p><input type = "submit" value = "submit" /></p>
