--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,9 @@
 <!-- https://zbiornik2.herokuapp.com -->
 <form action = "/wykres" method = "post">
          <p>Podaj czas w sekundach:</p>
-         <p><input type = "number" name = "time" /></p>
+         <p><input type = "number" name = "time" value="4000"/></p>
         <p>Porządana wysokość:</p>
-         <p><input type = "number" name = "height" step="0.01" /></p>
+         <p><input type = "number" name = "height" step="0.01" value="1.5"/></p>
     <br>
     <br>
     <p>STALE:</p>
